# CroweLM

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  mobile-preview.yml  release.yml
api/: __init__.py  main.py
cli/: README.md  package.json
cli/scripts/: postinstall.js
docker/: Dockerfile.agents  Dockerfile.api  Dockerfile.base  Dockerfile.pipeline  docker-compose.yml  prometheus.yml
mobile/: app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  pipeline.tsx  research.tsx  settings.tsx
mobile/app/molecule/: [smiles].tsx  new.tsx
mobile/components/molecules/: MoleculeViewer.tsx
mobile/components/ui/: Button.tsx  Card.tsx  Input.tsx  StatusBadge.tsx  index.ts
mobile/constants/: colors.ts
mobile/context/: AuthContext.tsx
mobile/hooks/: useOfflineCache.ts
mobile/services/: api.ts  notifications.ts
mobile/services/api/: client.ts
mobile/theme/: index.ts
