[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowelm"
version = "0.1.0"
description = "CroweLM: Biotech AI Platform for Drug Discovery"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Michael Crowe", email = "michael@crowelogic.com"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "biotech",
    "drug-discovery",
    "ai",
    "llm",
    "nvidia-nims",
    "protein-folding",
    "molecule-generation",
]
dependencies = [
    "crowelm-core>=0.1.0",
    "crowelm-agents>=0.1.0",
    "crowelm-nims>=0.1.0",
    "crowelm-pipelines>=0.1.0",
]

[project.optional-dependencies]
training = ["crowelm-training>=0.1.0"]
all = [
    "crowelm[training]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
crowelm = "crowelm.cli:main"

[project.urls]
Homepage = "https://github.com/MichaelCrowe11/crowelm"
Documentation = "https://github.com/MichaelCrowe11/crowelm#readme"
Repository = "https://github.com/MichaelCrowe11/crowelm"
Issues = "https://github.com/MichaelCrowe11/crowelm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crowelm*"]
namespaces = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
